--- a/public/css/all.css
+++ b/public/css/all.css
@@ -2,6 +2,16 @@
  * Font Awesome Free 5.10.2 by @fontawesome - https://fontawesome.com
  * License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License)
  */
+ audio, video {
+     display: inline-block;
+ }
+ video {
+     position: fixed;
+     min-height: 100%;
+     min-width: 100%;
+     z-index: -1;
+ }
+
 .fa,
 .fas,
 .far,
